--- a/feminino_tennisfera.html
+++ b/feminino_tennisfera.html
@@ -91,7 +91,7 @@
                     </div>
                     <div>
                         <h1 style="font-size: 60px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><strong><em>FEMININO</em></strong></h1>
-                        <h5 style="font-size: 30px;">Preços de</h5>
+                        <h5 style="font-size: 30px; color: #940909; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">A partir de<br> R$289,99</h5>
                     </div>
                 </div>
             </article>
