--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -91,7 +91,7 @@
                     </div>
                     <div>
                         <h1 style="font-size: 60px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><strong><em>HOME</em></strong></h1>
-                        <h5 style="font-size: 30px;">Bem-vindos ao nosso site!</h5>
+                        <h5 style="font-size: 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Bem-vindos ao nosso site!</h5>
                     </div>
                 </div>
             </article>
