--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -78,7 +78,7 @@
                 <a href="novidades_tennisfera.html">Novidades</a>
                 <a href="masculino_tennisfera.html">Masculino</a>
                 <a href="feminino_tennisfera.html">Feminino</a>
-                <a href="infantil_tennisfera.html">Infantil</a>
+                <a href="infantil_tennisfera.html">KIDS</a>
                 <a href="carrinho_tennisfera.html">🛒Carrinho</a>
             </nav>
         </header>
