mais paginas de detalhes

--- a/detalhesEclipsevermelho.html
+++ b/detalhesEclipsevermelho.html
@@ -87,12 +87,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/impulso.jpg" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/eclipse_vermelho" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis impulso">Tênis Impulso</p>
-                        <p class="valor">R$ 259,90</p>
+                        <p class="Tênis Eclipse vermelho">Tênis Eclipse Vermelho</p>
+                        <p class="valor">R$ 299,99</p>
                         <p>Super leve, confortável e ideal para caminhadas e treinos.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
