--- a/detalhesFluxosonico.html
+++ b/detalhesFluxosonico.html
@@ -87,13 +87,13 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/falcao_de_prata.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/fluxo_sonico.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Falção de Prata">Tênis Falção de prata</p>
-                        <p class="valor">R$ 299,99</p>
-                        <p>Super leve, confortável e ideal para caminhadas e treinos.</p>
+                        <p class="Tênis fluxo_sonico">Tênis Fluxo Sonico</p>
+                        <p class="valor">R$ 399,90</p>
+                        <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
                         <select id="tamanho">
@@ -104,9 +104,7 @@
                             <option>41</option>
                         </select><br><br>
 
-                        <button style="padding: 10px 20px; background-color: #0F4770; color: white; border: none; cursor: pointer;">
-                            Adicionar ao Carrinho
-                        </button>
+                       
                     </div>
                 </div>
             </article>
