--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -112,13 +112,13 @@
                 <div class="tenis">
                     <div>
                         <p class="tituloproduto">ENERGIA</p>
-                        <img src="static/energia.png" alt="Tênis na cor vermelha com detalhes em preto e branco, ideal para aulas de musculação e outros esportes que necessitam de maior estabilidade." width="330" height="330"/>
+                        <a href="detalhesEnergia.html" style="text-decoration: none;"><img src="static/energia.png" alt="Tênis na cor vermelha com detalhes em preto e branco, ideal para aulas de musculação e outros esportes que necessitam de maior estabilidade." width="330" height="330"/></a>
                         <p class="valor">R$359,90</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">IMPULSO</p>
-                        <img src="static/impulso.jpg" alt="Tênis na cor cinza escuro com detalhes em branco, preto e azul, ideal para aulas de musculação e outros esportes que necessitam de maior estabilidade." width="330" height="330"/>
+                        <a href="detalhesImpulso.html" style="text-decoration: none;"><img src="static/impulso.jpg" alt="Tênis na cor cinza escuro com detalhes em branco, preto e azul, ideal para aulas de musculação e outros esportes que necessitam de maior estabilidade." width="330" height="330"/></a>
                         <p class="valor">R$359,90</p>
                     </div>
   
