--- a/detalhesAtlantico-1.html
+++ b/detalhesAtlantico-1.html
@@ -87,12 +87,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="atlantico.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/atlantico.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
                         <p class="Tênis atlantico">Tênis Atlantico</p>
-                        <p class="valor">R$ 279,90</p>
+                        <p class="valor">R$ 379,90</p>
                         <p>Super leve, confortável e ideal para caminhadas e treinos.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
@@ -104,9 +104,7 @@
                             <option>41</option>
                         </select><br><br>
 
-                        <button style="padding: 10px 20px; background-color: #0F4770; color: white; border: none; cursor: pointer;">
-                            Adicionar ao Carrinho
-                        </button>
+                       
                     </div>
                 </div>
             </article>
