--- a/detalhesFlash.html
+++ b/detalhesFlash.html
@@ -87,12 +87,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="flash.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/flash.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
                         <p class="Tênis FLASH">Tênis Flash</p>
-                        <p class="valor">R$ 299,90</p>
+                        <p class="valor">R$ 399,90</p>
                         <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
@@ -104,9 +104,7 @@
                             <option>41</option>
                         </select><br><br>
 
-                        <button style="padding: 10px 20px; background-color: #0F4770; color: white; border: none; cursor: pointer;">
-                            Adicionar ao Carrinho
-                        </button>
+                       
                     </div>
                 </div>
             </article>
