--- a/detalhesFutura.html
+++ b/detalhesFutura.html
@@ -87,7 +87,7 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/futura" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/futura.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
@@ -104,8 +104,6 @@
                             <option>41</option>
                         </select><br><br>
 
-                        <button style="padding: 10px 20px; background-color: #0F4770; color: white; border: none; cursor: pointer;">
-                            Adicionar ao Carrinho
                         </button>
                     </div>
                 </div>
