--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -178,19 +178,19 @@
                     
                     <div>
                         <p class="tituloproduto">ABSTRATO</p>
-                        <img src="static/abstrato.png" alt="Design com formas geométricas e cores que se misturam, para um visual único e criativo." width="330" height="330"/>
+                        <a href="detalhesAbstrato.html" style="text-decoration: none;"><img src="static/abstrato.png" alt="Design com formas geométricas e cores que se misturam, para um visual único e criativo." width="330" height="330"/></a>
                         <p class="valor">R$899,99</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">QUANTUM SHIFT</p>
-                        <img src="static/quantum_shift.png" alt="Tênis com a cor principal preto, em detalhes na cor roxo." width="330" height="330"/>
+                        <a href="detalhesQUANTUM SHIFT.html" style="text-decoration: none;"><img src="static/quantum_shift.png" alt="Tênis com a cor principal preto, em detalhes na cor roxo." width="330" height="330"/></a>
                         <p class="valor">R$789,99</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">FLUXO SONICO</p>
-                        <img src="static/fluxo_sonico.png" alt="Design com linhas dinâmicas que se propagam pelo tênis. A cor principal é o preto, com detalhes azul holográfico e laranja." width="330" height="330"/>
+                        <a href="detalhesFluxosonico.html" style="text-decoration: none;"><img src="static/fluxo_sonico.png" alt="Design com linhas dinâmicas que se propagam pelo tênis. A cor principal é o preto, com detalhes azul holográfico e laranja." width="330" height="330"/></a>
                         <p class="valor">R$679,99</p>
                     </div>
   
@@ -208,31 +208,31 @@
 
                     <div>
                         <p class="tituloproduto">PASSOS DE CRISTAL</p>
-                        <img src="static/passos_de_cristal.png" alt="Tons claros como branco e prata, com uma textura que lembra a lapidação de cristais. O design é minimalista, mas os detalhes sutis dão um toque de luxo e exclusividade." width="330" height="330"/>
+                        <a href="DetalhesPassosdeCristal.html" style="text-decoration: none;"><img src="static/passos_de_cristal.png" alt="Tons claros como branco e prata, com uma textura que lembra a lapidação de cristais. O design é minimalista, mas os detalhes sutis dão um toque de luxo e exclusividade." width="330" height="330"/></a>
                         <p class="valor">R$339,99</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">AURORA</p>
-                        <img src="static/aurora.png" alt="Tons claros como pêssego e rosa, com um degradê suave que lembra um nascer do sol. Detalhes em dourado e um sutil brilho perolado dão um toque de leveza e magia. O solado é neutro e os cadarços possuem um leve fio metálico." width="330" height="330"/>
+                        <a href="DetalhesAurora.html" style="text-decoration: none;"><img src="static/aurora.png" alt="Tons claros como pêssego e rosa, com um degradê suave que lembra um nascer do sol. Detalhes em dourado e um sutil brilho perolado dão um toque de leveza e magia. O solado é neutro e os cadarços possuem um leve fio metálico." width="330" height="330"/></a>
                         <p class="valor">R$430,00</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">VÊNUS</p>
-                        <img src="static/venus.png" alt="Um tênis ousado e sensual, com a cor principal em um vermelho vibrante e detalhes em dourado. O material é um mix de couro envernizado e tecido, com linhas sinuosas. O solado é uma plataforma elevada em branco e preto, criando uma silhueta moderna e marcante." width="330" height="330"/>
+                        <a href="DetalhesVênus.html" style="text-decoration: none;"><img src="static/venus.png" alt="Um tênis ousado e sensual, com a cor principal em um vermelho vibrante e detalhes em dourado. O material é um mix de couro envernizado e tecido, com linhas sinuosas. O solado é uma plataforma elevada em branco e preto, criando uma silhueta moderna e marcante." width="330" height="330"/></a>
                         <p class="valor">R$550,00</p>
                     </div>
                     
                     <div>
                         <p class="tituloproduto">PURA</p>
-                        <img src="static/pura.png" alt="Tênis na cor branca, com um design simples e minimalista, ideal para qualquer ocasião." width="330" height="330"/>
+                        <a href="DetalhesPura.html" style="text-decoration: none;"><img src="static/pura.png" alt="Tênis na cor branca, com um design simples e minimalista, ideal para qualquer ocasião." width="330" height="330"/></a>
                         <p class="valor">R$289,99</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">ESSENCIAL</p>
-                        <img src="static/essencial.png" alt="Tênis com um design clássico e atemporal, na cor rosa bebê com detalhes discretos em branco." width="330" height="330"/>
+                        <a href="DetalhesEssencial.html" style="text-decoration: none;"><img src="static/essencial.png" alt="Tênis com um design clássico e atemporal, na cor rosa bebê com detalhes discretos em branco." width="330" height="330"/></a>
                         <p class="valor">R$289,99</p>
                     </div>
   
