mudanças_manha_Tata

--- a/detalhesElegance.html
+++ b/detalhesElegance.html
@@ -3,7 +3,7 @@
         <title>TENNISFERA</title>
         <style>
             .barra-navegacao {
-                background-color: #0F4770; 
+                background-color: #0F4770;
                 padding: 20px; /* Adiciona um espaço interno para a faixa parecer maior. */
                 display: flex; /* Alinha os itens em uma linha. */
                 align-items: center; /* Centraliza verticalmente o texto e os links. */
@@ -11,10 +11,10 @@
             }
 
             .barra-navegacao h4 {
-                margin: 0; 
-                color: white; 
-                font-size: 35px; 
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+                margin: 0;
+                color: white;
+                font-size: 35px;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             }
 
             .menu-links {
@@ -25,8 +25,8 @@
             .menu-links a {
                 color: white; /* Cor dos links. */
                 text-decoration: none; /* Remove o sublinhado dos links. */
-                font-size: 18px; 
-                font-family: Arial, Helvetica, sans-serif; 
+                font-size: 18px;
+                font-family: Arial, Helvetica, sans-serif;
             }
 
             body {
@@ -87,12 +87,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/fluxo_sonico.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/elegance.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis fluxo_sonico">Tênis Fluxo Sonico</p>
-                        <p class="valor">R$ 679,99</p>
+                        <p class="Tênis Elegance">Tênis Elegance</p>
+                        <p class="valor">R$387,90</p>
                         <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
