--- a/DetalhesAurora.html
+++ b/DetalhesAurora.html
@@ -97,11 +97,11 @@
 
                         <label for="tamanho">Tamanho:</label><br>
                         <select id="tamanho">
+                            <option>35/option>
+                            <option>36</option>
                             <option>37</option>
                             <option>38</option>
                             <option>39</option>
-                            <option>40</option>
-                            <option>41</option>
                         </select><br><br>
 
                        
