--- a/detalhesEclipsevermelho.html
+++ b/detalhesEclipsevermelho.html
@@ -87,7 +87,7 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/eclipse_vermelho" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/eclipse_vermelho.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
