--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -196,13 +196,13 @@
   
                     <div>
                         <p class="tituloproduto">PULSE NOVA</p>
-                        <img src="static/pulse_nova.png" alt="Design com um padrão vibrante que parece pulsar, na cor preta com detalhes em azul." width="330" height="330"/>
+                        <a href="detalhesPulseNova.html" style="text-decoration: none;"><img src="static/pulse_nova.png" alt="Design com um padrão vibrante que parece pulsar, na cor preta com detalhes em azul." width="330" height="330"/></a>
                         <p class="valor">R$789,00</p>
                     </div>
                     
                     <div>
                         <p class="tituloproduto">DESPERTAR CARMESIM</p>
-                        <img src="static/despertar_carmesim.png" alt="Tênis com design elegante na cor branca, com detalhes em preto e vermelho." width="330" height="330"/>
+                         <a href="detalhesDESPERTAR CARMESIM.html" style="text-decoration: none;"><img src="static/despertar_carmesim.png" alt="Tênis com design elegante na cor branca, com detalhes em preto e vermelho." width="330" height="330"/></a>
                         <p class="valor">R$789,00</p>
                     </div>
 
