--- a/detalhesPulseNova.html
+++ b/detalhesPulseNova.html
@@ -3,7 +3,7 @@
         <title>TENNISFERA</title>
         <style>
             .barra-navegacao {
-                background-color: #0F4770;
+                background-color: #0F4770; 
                 padding: 20px; /* Adiciona um espaço interno para a faixa parecer maior. */
                 display: flex; /* Alinha os itens em uma linha. */
                 align-items: center; /* Centraliza verticalmente o texto e os links. */
@@ -11,10 +11,10 @@
             }
 
             .barra-navegacao h4 {
-                margin: 0;
-                color: white;
-                font-size: 35px;
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                margin: 0; 
+                color: white; 
+                font-size: 35px; 
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
             }
 
             .menu-links {
@@ -25,8 +25,8 @@
             .menu-links a {
                 color: white; /* Cor dos links. */
                 text-decoration: none; /* Remove o sublinhado dos links. */
-                font-size: 18px;
-                font-family: Arial, Helvetica, sans-serif;
+                font-size: 18px; 
+                font-family: Arial, Helvetica, sans-serif; 
             }
 
             body {
@@ -87,21 +87,21 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/brilho_serena.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="static/pulse_nova.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Serena">Tênis Serena</p>
-                        <p class="valor">R$387,90</p>
+                        <p class="Tênis Pulse Nova">Tênis Pulse nova</p>
+                        <p class="valor">R$ 789,00</p>
                         <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
                         <select id="tamanho">
-                            <option>35</option>
-                            <option>36</option>
                             <option>37</option>
                             <option>38</option>
                             <option>39</option>
+                            <option>40</option>
+                            <option>41</option>
                         </select><br><br>
 
                        
