--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -238,55 +238,55 @@
   
                     <div>
                         <p class="tituloproduto">ELEGANCE</p>
-                        <img src="static/elegance.png" alt="Tênis com um design mais fino e delicado, na cor rosa bebê com detalhes em dourado, para um visual sofisticado." width="330" height="330"/>
+                        <a href="detalhesElegance.html" style="text-decoration: none;"><img src="static/elegance.png" alt="Tênis com um design mais fino e delicado, na cor rosa bebê com detalhes em dourado, para um visual sofisticado." width="330" height="330"/></a>
                         <p class="valor">R$387,90</p>
                     </div>
                     
                     <div>
                         <p class="tituloproduto">SERENA</p>
-                        <img src="static/brilho_serena.png" alt="Tênis na cor azul bebê, com um brilho sutil e detalhes em prata." width="330" height="330"/>
+                        <a href="detalhesSerena.html" style="text-decoration: none;"><img src="static/brilho_serena.png" alt="Tênis na cor azul bebê, com um brilho sutil e detalhes em prata." width="330" height="330"/></a>
                         <p class="valor">R$387,90</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">EXPLORADOR ESTELAR</p>
-                        <img src="static/explorador_estelar.png" alt="Cores vivas como azul, vermelho e amarelo, com estampas de planetas, foguetes e estrelas cadentes. O solado tem um design que remete a pegadas de um alienígena." width="330" height="330"/>
+                        <a href="detalhesExploradorEstelar.html" style="text-decoration: none;"><img src="static/explorador_estelar.png" alt="Cores vivas como azul, vermelho e amarelo, com estampas de planetas, foguetes e estrelas cadentes. O solado tem um design que remete a pegadas de um alienígena." width="330" height="330"/></a>
                         <p class="valor">R$129,90</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">REINO MÁGICO</p>
-                        <img src="static/reino_magico.png" alt="Tons de rosa e roxo, com glitter, detalhes de unicórnios, castelos e fadas. O cadarço pode ter um formato de laço ou estrelinhas." width="330" height="330"/>
+                         <a href="detalhesReinoMagico.html" style="text-decoration: none;"><img src="static/reino_magico.png" alt="Tons de rosa e roxo, com glitter, detalhes de unicórnios, castelos e fadas. O cadarço pode ter um formato de laço ou estrelinhas." width="330" height="330"/></a>
                         <p class="valor">R$159,99</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">PEGADA DE DINOSSAURO</p>
-                        <img src="static/pe_dinossauro.png" alt="Cores fortes como verde e marrom, com texturas que imitam a pele de um dinossauro. O solado pode ter a forma de pegadas de T-Rex." width="330" height="330"/>
+                        <a href="detalhesPegadadeDinossauro.html" style="text-decoration: none;"><img src="static/pe_dinossauro.png" alt="Cores fortes como verde e marrom, com texturas que imitam a pele de um dinossauro. O solado pode ter a forma de pegadas de T-Rex." width="330" height="330"/></a>
                         <p class="valor">R$129,90</p>
                     </div>
                     
                     <div>
                         <p class="tituloproduto">AVENTURA AQUÁTICA</p>
-                        <img src="static/aventura_aquatica.png" alt="Cores que remetem ao mar, como azul e verde-água, com estampas de peixes, conchas e ondas. Os cadarços podem ser na cor de uma rede de pesca ou na cor da areia." width="330" height="330"/>
+                        <a href="detalhesAventuraAquatica.html" style="text-decoration: none;"><img src="static/aventura_aquatica.png" alt="Cores que remetem ao mar, como azul e verde-água, com estampas de peixes, conchas e ondas. Os cadarços podem ser na cor de uma rede de pesca ou na cor da areia." width="330" height="330"/></a>
                         <p class="valor">R$129,90</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">ROBUSTO</p>
-                        <img src="static/robusto.png" alt="Design robusto e angular, com cores metálicas como cinza e prata e detalhes em vermelho e azul. Pode ter texturas que lembram placas de metal ou parafusos." width="330" height="330"/>
+                        <a href="detalhesRobusto.html" style="text-decoration: none;"><img src="static/robusto.png" alt="Design robusto e angular, com cores metálicas como cinza e prata e detalhes em vermelho e azul. Pode ter texturas que lembram placas de metal ou parafusos." width="330" height="330"/></a>
                         <p class="valor">R$169,99</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">JARDIM SECRETO</p>
-                        <img src="static/jardim_secreto.png" alt="Estampas florais e de insetos, como joaninhas e borboletas. As cores são suaves, como verde-claro, amarelo e lilás, e os detalhes podem incluir pequenas flores bordadas." width="330" height="330"/>
+                        <a href="detalhesJardimSecreto.html" style="text-decoration: none;"><img src="static/jardim_secreto.png" alt="Estampas florais e de insetos, como joaninhas e borboletas. As cores são suaves, como verde-claro, amarelo e lilás, e os detalhes podem incluir pequenas flores bordadas." width="330" height="330"/></a>
                         <p class="valor">R$99,90</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">RELAMPAGO</p>
-                        <img src="static/relampago.png" alt="Design esportivo com linhas dinâmicas, nas cores laranja, preto e branco. Pode ter um símbolo de raio na lateral para reforçar a ideia de velocidade." width="330" height="330"/>
+                        <a href="detalhesJardimSecreto.html" style="text-decoration: none;"><img src="static/relampago.png" alt="Design esportivo com linhas dinâmicas, nas cores laranja, preto e branco. Pode ter um símbolo de raio na lateral para reforçar a ideia de velocidade." width="330" height="330"/></a>
                         <p class="valor">R$99,90</p>
                     </div>
                 </div>
