add links no home tata

--- a/home_tennisfera.html
+++ b/home_tennisfera.html
@@ -160,7 +160,7 @@
                     
                     <div>
                         <p class="tituloproduto">FALCÃO DE PRATA</p>
-                        <a href="detalhesFalcaodeprata" style="text-decoration: none;"><img src="static/falcao_de_prata.png" alt="Tênis com design aerodinâmico, na cor azul com detalhes em prata, para um visual elegante e rápido." width="330" height="330"/></a>
+                        <a href="detalhesFalcaodeprata.html" style="text-decoration: none;"><img src="static/falcao_de_prata.png" alt="Tênis com design aerodinâmico, na cor azul com detalhes em prata, para um visual elegante e rápido." width="330" height="330"/></a>
                         <p class="valor">R$599,99</p>
                     </div>
   
