--- a/novidades_tennisfera.html
+++ b/novidades_tennisfera.html
@@ -109,7 +109,29 @@
                 <h2 class="titlesessao" style="font-size: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span><span style="padding: 10px;">NEW!</span></h2>
                 <br>
                 <div class="tenis">
-                    
+                    <div>
+                        <p class="tituloproduto">FORÇA ORBITAL</p>
+                        <a href="detalhes/detalhesForçaOrbital.html" style="text-decoration: none;"><img src="static/força_orbital.png" alt="Tênis com um design futurista, na cor branca com detalhes em preto e vermelho, ideal para jogos de basquete pela sua estabilidade." width="330" height="330"/></a>
+                        <p class="valor">R$990,00</p>
+                    </div>
+
+                    <div>
+                        <p class="tituloproduto">ABSTRATO</p>
+                        <a href="detalhes/detalhesAbstrato.html" style="text-decoration: none;"><img src="static/abstrato.png" alt="Design com formas geométricas e cores que se misturam, para um visual único e criativo." width="330" height="330"/></a>
+                        <p class="valor">R$899,99</p>
+                    </div>
+
+                    <div>
+                        <p class="tituloproduto">VÊNUS</p>
+                        <a href="detalhes/DetalhesVênus.html" style="text-decoration: none;"><img src="static/venus.png" alt="Um tênis ousado e sensual, com a cor principal em um vermelho vibrante e detalhes em dourado. O material é um mix de couro envernizado e tecido, com linhas sinuosas. O solado é uma plataforma elevada em branco e preto, criando uma silhueta moderna e marcante." width="330" height="330"/></a>
+                        <p class="valor">R$550,00</p>
+                    </div>
+
+                    <div>
+                        <p class="tituloproduto">AVENTURA AQUÁTICA</p>
+                        <a href="detalhes/detalhesAventuraAquatica.html" style="text-decoration: none;"><img src="static/aventura_aquatica.png" alt="Cores que remetem ao mar, como azul e verde-água, com estampas de peixes, conchas e ondas. Os cadarços podem ser na cor de uma rede de pesca ou na cor da areia." width="330" height="330"/></a>
+                        <p class="valor">R$129,90</p>
+                    </div>
                 </div>
 
             <h5>Telefone para contato: (17)99608-6466</h5>
