--- a/detalhes/detalhesForçaOrbital.html
+++ b/detalhes/detalhesForçaOrbital.html
@@ -34,7 +34,7 @@
             }
 
             div.tenis {
-                width: 100%;
+                width:100%;
                 overflow:auto;
             }
 
@@ -71,15 +71,17 @@
     </head>
     <body>
         <header class="barra-navegacao">
-            <h4>TENNISFERA</h4>
+            <h4>
+                <a style="text-decoration: none; color: #fff;" href="../home_tennisfera.html">TENNISFERA</a>
+            </h4>
             <nav class="menu-links">
-                <a href="home_tennisfera.html">Home</a>
-                <a href="promocoes_tennisfera.html">Promoções</a>
-                <a href="novidades_tennisfera.html">Novidades</a>
-                <a href="masculino_tennisfera.html">Masculino</a>
-                <a href="feminino_tennisfera.html">Feminino</a>
-                <a href="infantil_tennisfera.html">Infantil</a>
-                <a href="carrinho_tennisfera.html">🛒Carrinho</a>
+                <a href="../home_tennisfera.html">Home</a>
+                <a href="../promocoes_tennisfera.html">Promoções</a>
+                <a href="../novidades_tennisfera.html">Novidades</a>
+                <a href="../masculino_tennisfera.html">Masculino</a>
+                <a href="../feminino_tennisfera.html">Feminino</a>
+                <a href="../infantil_tennisfera.html">Infantil</a>
+                <a href="../carrinho_tennisfera.html">🛒Carrinho</a>
             </nav>
         </header>
         <main>
@@ -87,12 +89,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/abstrato.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="../static/força_orbital.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Abstrato">Tênis Abstrato</p>
-                        <p class="valor">R$ 899,90</p>
+                        <p class="Tênis     fadasorça Orbital">Tênis Força Orbital</p>
+                        <p class="valor">R$ 990,00</p>
                         <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
@@ -105,6 +107,7 @@
                         </select><br><br>
 
                        
+                        </button>
                     </div>
                 </div>
             </article>
