--- a/detalhes/detalhesFutura.html
+++ b/detalhes/detalhesFutura.html
@@ -71,15 +71,17 @@
     </head>
     <body>
         <header class="barra-navegacao">
-            <h4>TENNISFERA</h4>
+            <h4>
+                <a style="text-decoration: none; color: #fff;" href="../home_tennisfera.html">TENNISFERA</a>
+            </h4>
             <nav class="menu-links">
-                <a href="home_tennisfera.html">Home</a>
-                <a href="promocoes_tennisfera.html">Promoções</a>
-                <a href="novidades_tennisfera.html">Novidades</a>
-                <a href="masculino_tennisfera.html">Masculino</a>
-                <a href="feminino_tennisfera.html">Feminino</a>
-                <a href="infantil_tennisfera.html">Infantil</a>
-                <a href="carrinho_tennisfera.html">🛒Carrinho</a>
+                <a href="../home_tennisfera.html">Home</a>
+                <a href="../promocoes_tennisfera.html">Promoções</a>
+                <a href="../novidades_tennisfera.html">Novidades</a>
+                <a href="../masculino_tennisfera.html">Masculino</a>
+                <a href="../feminino_tennisfera.html">Feminino</a>
+                <a href="../infantil_tennisfera.html">Infantil</a>
+                <a href="../carrinho_tennisfera.html">🛒Carrinho</a>
             </nav>
         </header>
         <main>
@@ -87,12 +89,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/falcao_de_prata.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="../static/futura.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Falção de Prata">Tênis Falção de prata</p>
-                        <p class="valor">R$ 599,99</p>
+                        <p class="Tênis Futura">Tênis Futura</p>
+                        <p class="valor">R$ 659,90</p>
                         <p>Super leve, confortável e ideal para caminhadas e treinos.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
@@ -104,7 +106,7 @@
                             <option>41</option>
                         </select><br><br>
 
-                    
+                        </button>
                     </div>
                 </div>
             </article>
