--- a/detalhes/detalhesImpulso.html
+++ b/detalhes/detalhesImpulso.html
@@ -3,7 +3,7 @@
         <title>TENNISFERA</title>
         <style>
             .barra-navegacao {
-                background-color: #0F4770;
+                background-color: #0F4770; 
                 padding: 20px; /* Adiciona um espaço interno para a faixa parecer maior. */
                 display: flex; /* Alinha os itens em uma linha. */
                 align-items: center; /* Centraliza verticalmente o texto e os links. */
@@ -11,10 +11,10 @@
             }
 
             .barra-navegacao h4 {
-                margin: 0;
-                color: white;
-                font-size: 35px;
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                margin: 0; 
+                color: white; 
+                font-size: 35px; 
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
             }
 
             .menu-links {
@@ -25,8 +25,8 @@
             .menu-links a {
                 color: white; /* Cor dos links. */
                 text-decoration: none; /* Remove o sublinhado dos links. */
-                font-size: 18px;
-                font-family: Arial, Helvetica, sans-serif;
+                font-size: 18px; 
+                font-family: Arial, Helvetica, sans-serif; 
             }
 
             body {
@@ -71,15 +71,17 @@
     </head>
     <body>
         <header class="barra-navegacao">
-            <h4>TENNISFERA</h4>
+            <h4>
+                <a style="text-decoration: none; color: #fff;" href="../home_tennisfera.html">TENNISFERA</a>
+            </h4>
             <nav class="menu-links">
-                <a href="home_tennisfera.html">Home</a>
-                <a href="promocoes_tennisfera.html">Promoções</a>
-                <a href="novidades_tennisfera.html">Novidades</a>
-                <a href="masculino_tennisfera.html">Masculino</a>
-                <a href="feminino_tennisfera.html">Feminino</a>
-                <a href="infantil_tennisfera.html">Infantil</a>
-                <a href="carrinho_tennisfera.html">🛒Carrinho</a>
+                <a href="../home_tennisfera.html">Home</a>
+                <a href="../promocoes_tennisfera.html">Promoções</a>
+                <a href="../novidades_tennisfera.html">Novidades</a>
+                <a href="../masculino_tennisfera.html">Masculino</a>
+                <a href="../feminino_tennisfera.html">Feminino</a>
+                <a href="../infantil_tennisfera.html">Infantil</a>
+                <a href="../carrinho_tennisfera.html">🛒Carrinho</a>
             </nav>
         </header>
         <main>
@@ -87,24 +89,25 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/reino_magico.png"width: 100%;">
+                       <img src="../static/impulso.jpg" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Reino Mágico">Tênis Reino Mágico</p>
-                        <p class="valor">R$159,99</p>
-                        <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
+                        <p class="Tênis impulso">Tênis Impulso</p>
+                        <p class="valor">R$ 359,90</p>
+                        <p>Super leve, confortável e ideal para caminhadas e treinos.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
                         <select id="tamanho">
-                            <option>28</option>
-                            <option>29</option>
-                            <option>30</option>
-                            <option>31</option>
-                            <option>32</option>
+                            <option>37</option>
+                            <option>38</option>
+                            <option>39</option>
+                            <option>40</option>
+                            <option>41</option>
                         </select><br><br>
 
-                       
+                    
+                        </button>
                     </div>
                 </div>
             </article>
