--- a/detalhes/detalhesOnix.html
+++ b/detalhes/detalhesOnix.html
@@ -71,15 +71,17 @@
     </head>
     <body>
         <header class="barra-navegacao">
-            <h4>TENNISFERA</h4>
+            <h4>
+                <a style="text-decoration: none; color: #fff;" href="../home_tennisfera.html">TENNISFERA</a>
+            </h4>
             <nav class="menu-links">
-                <a href="home_tennisfera.html">Home</a>
-                <a href="promocoes_tennisfera.html">Promoções</a>
-                <a href="novidades_tennisfera.html">Novidades</a>
-                <a href="masculino_tennisfera.html">Masculino</a>
-                <a href="feminino_tennisfera.html">Feminino</a>
-                <a href="infantil_tennisfera.html">Infantil</a>
-                <a href="carrinho_tennisfera.html">🛒Carrinho</a>
+                <a href="../home_tennisfera.html">Home</a>
+                <a href="../promocoes_tennisfera.html">Promoções</a>
+                <a href="../novidades_tennisfera.html">Novidades</a>
+                <a href="../masculino_tennisfera.html">Masculino</a>
+                <a href="../feminino_tennisfera.html">Feminino</a>
+                <a href="../infantil_tennisfera.html">Infantil</a>
+                <a href="../carrinho_tennisfera.html">🛒Carrinho</a>
             </nav>
         </header>
         <main>
@@ -87,13 +89,13 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="energia.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="../static/onix.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Energia">Tênis Energia</p>
-                        <p class="valor">R$ 259,90</p>
-                        <p>Super leve, confortável e ideal para caminhadas e treinos.</p>
+                        <p class="Tênis onix">Tênis Esportivo</p>
+                        <p class="valor">R$ 379,90</p>
+                        <p>Super leve, confortável e ideal para caminhadas e treinos. Disponível em várias cores.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
                         <select id="tamanho">
@@ -104,9 +106,6 @@
                             <option>41</option>
                         </select><br><br>
 
-                        <button style="padding: 10px 20px; background-color: #0F4770; color: white; border: none; cursor: pointer;">
-                            Adicionar ao Carrinho
-                        </button>
                     </div>
                 </div>
             </article>
