--- a/detalhes/detalhesPegadadeDinossauro.html
+++ b/detalhes/detalhesPegadadeDinossauro.html
@@ -71,15 +71,17 @@
     </head>
     <body>
         <header class="barra-navegacao">
-            <h4>TENNISFERA</h4>
+            <h4>
+                <a style="text-decoration: none; color: #fff;" href="../home_tennisfera.html">TENNISFERA</a>
+            </h4>
             <nav class="menu-links">
-                <a href="home_tennisfera.html">Home</a>
-                <a href="promocoes_tennisfera.html">Promoções</a>
-                <a href="novidades_tennisfera.html">Novidades</a>
-                <a href="masculino_tennisfera.html">Masculino</a>
-                <a href="feminino_tennisfera.html">Feminino</a>
-                <a href="infantil_tennisfera.html">Infantil</a>
-                <a href="carrinho_tennisfera.html">🛒Carrinho</a>
+                <a href="../home_tennisfera.html">Home</a>
+                <a href="../promocoes_tennisfera.html">Promoções</a>
+                <a href="../novidades_tennisfera.html">Novidades</a>
+                <a href="../masculino_tennisfera.html">Masculino</a>
+                <a href="../feminino_tennisfera.html">Feminino</a>
+                <a href="../infantil_tennisfera.html">Infantil</a>
+                <a href="../carrinho_tennisfera.html">🛒Carrinho</a>
             </nav>
         </header>
         <main>
@@ -87,12 +89,12 @@
                 <br>
                 <div class="cabeçalho">
                     <div style="margin-left: 200px; margin-right: 50px">
-                       <img src="static/relampago.png" alt="Tênis Modelo" style="width: 100%;">
+                       <img src="../static/pe_dinossauro.png" alt="Tênis Modelo" style="width: 100%;">
                     </div>
 
                     <div style="margin-right: 50px" >
-                        <p class="Tênis Relampago">Tênis Relampago</p>
-                        <p class="valor">R$99,90</p>
+                        <p class="Tênis Pegada de Dinossauro">Tênis Pegada de Dinossauro</p>
+                        <p class="valor">R$129,90</p>
                         <p>Com design moderno e estrutura reforçada, esse tênis oferece conforto e estabilidade para suas caminhadas com muito mais estilo.</p>
 
                         <label for="tamanho">Tamanho:</label><br>
