--- a/feminino_tennisfera.html
+++ b/feminino_tennisfera.html
@@ -111,45 +111,46 @@
                 <div class="tenis">
                     <div>
                         <p class="tituloproduto">PASSOS DE CRISTAL</p>
-                        <img src="static/passos_de_cristal.png" alt="Tons claros como branco e prata, com uma textura que lembra a lapidação de cristais. O design é minimalista, mas os detalhes sutis dão um toque de luxo e exclusividade." width="330" height="330"/>
+                        <a href="detalhes/DetalhesPassosdeCristal.html" style="text-decoration: none;"><img src="static/passos_de_cristal.png" alt="Tons claros como branco e prata, com uma textura que lembra a lapidação de cristais. O design é minimalista, mas os detalhes sutis dão um toque de luxo e exclusividade." width="330" height="330"/></a>
                         <p class="valor">R$339,99</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">AURORA</p>
-                        <img src="static/aurora.png" alt="Tons claros como pêssego e rosa, com um degradê suave que lembra um nascer do sol. Detalhes em dourado e um sutil brilho perolado dão um toque de leveza e magia. O solado é neutro e os cadarços possuem um leve fio metálico." width="330" height="330"/>
+                        <a href="detalhes/DetalhesAurora.html" style="text-decoration: none;"><img src="static/aurora.png" alt="Tons claros como pêssego e rosa, com um degradê suave que lembra um nascer do sol. Detalhes em dourado e um sutil brilho perolado dão um toque de leveza e magia. O solado é neutro e os cadarços possuem um leve fio metálico." width="330" height="330"/></a>
                         <p class="valor">R$430,00</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">VÊNUS</p>
-                        <img src="static/venus.png" alt="Um tênis ousado e sensual, com a cor principal em um vermelho vibrante e detalhes em dourado. O material é um mix de couro envernizado e tecido, com linhas sinuosas. O solado é uma plataforma elevada em branco e preto, criando uma silhueta moderna e marcante." width="330" height="330"/>
+                        <a href="detalhes/DetalhesVênus.html" style="text-decoration: none;"><img src="static/venus.png" alt="Um tênis ousado e sensual, com a cor principal em um vermelho vibrante e detalhes em dourado. O material é um mix de couro envernizado e tecido, com linhas sinuosas. O solado é uma plataforma elevada em branco e preto, criando uma silhueta moderna e marcante." width="330" height="330"/></a>
                         <p class="valor">R$550,00</p>
                     </div>
                     
                     <div>
                         <p class="tituloproduto">PURA</p>
-                        <img src="static/pura.png" alt="Tênis na cor branca, com um design simples e minimalista, ideal para qualquer ocasião." width="330" height="330"/>
+                        <a href="detalhes/DetalhesPura.html" style="text-decoration: none;"><img src="static/pura.png" alt="Tênis na cor branca, com um design simples e minimalista, ideal para qualquer ocasião." width="330" height="330"/></a>
                         <p class="valor">R$289,99</p>
                     </div>
 
                     <div>
                         <p class="tituloproduto">ESSENCIAL</p>
-                        <img src="static/essencial.png" alt="Tênis com um design clássico e atemporal, na cor rosa bebê com detalhes discretos em branco." width="330" height="330"/>
+                        <a href="detalhes/DetalhesEssencial.html" style="text-decoration: none;"><img src="static/essencial.png" alt="Tênis com um design clássico e atemporal, na cor rosa bebê com detalhes discretos em branco." width="330" height="330"/></a>
                         <p class="valor">R$289,99</p>
                     </div>
   
                     <div>
                         <p class="tituloproduto">ELEGANCE</p>
-                        <img src="static/elegance.png" alt="Tênis com um design mais fino e delicado, na cor rosa bebê com detalhes em dourado, para um visual sofisticado." width="330" height="330"/>
+                        <a href="detalhes/detalhesElegance.html" style="text-decoration: none;"><img src="static/elegance.png" alt="Tênis com um design mais fino e delicado, na cor rosa bebê com detalhes em dourado, para um visual sofisticado." width="330" height="330"/></a>
                         <p class="valor">R$387,90</p>
                     </div>
                     
                     <div>
                         <p class="tituloproduto">SERENA</p>
-                        <img src="static/brilho_serena.png" alt="Tênis na cor azul bebê, com um brilho sutil e detalhes em prata." width="330" height="330"/>
+                        <a href="detalhes/detalhesSerena.html" style="text-decoration: none;"><img src="static/brilho_serena.png" alt="Tênis na cor azul bebê, com um brilho sutil e detalhes em prata." width="330" height="330"/></a>
                         <p class="valor">R$387,90</p>
                     </div>
+
                 </div>
 
             <h5>Telefone para contato: (17)99608-6466</h5>
